# coding-discovery-center

./: .eslintrc.yml  .lint-condo.yaml  .travis.yml  Makefile.am  autogen.sh  build-flatpak  com.endlessm.Coding.DiscoveryCenter.json  com.endlessm.Coding.DiscoveryCenter.json.in  com.endlessm.Coding.DiscoveryCenter.yaml  configure.ac  meson.build
data/: application.css  com.endlessm.Coding.DiscoveryCenter.data.gresource.xml  com.endlessm.Coding.DiscoveryCenter.desktop  com.endlessm.Coding.DiscoveryCenter.service.in  discovery-center-category-page.ui  discovery-center-home-page.ui  discovery-center-search-results-page.ui  discovery-center-search.ui  discovery-content-carousel-item.ui  discovery-content-carousel.ui  discovery-content-flow-box-child-item.ui  discovery-content-flow-box.ui  discovery-content-item-view.ui  discovery-content-row.ui  main.ui  meson.build
debian/: changelog  coding-discovery-center.install  control  copyright
src/: com.endlessm.Coding.DiscoveryCenter.in  com.endlessm.Coding.DiscoveryCenter.src.gresource.xml  main.js  meson.build  service.js
tests/: meson.build
tests/js/: testDiscoveryCenter.js
