# Copyright 2018 Endless Mobile, Inc.

gnome.compile_resources('com.endlessm.Coding.DiscoveryCenter.data',
    'com.endlessm.Coding.DiscoveryCenter.data.gresource.xml',
    gresource_bundle: true, install: true, install_dir: pkgdatadir)

install_data('com.endlessm.Coding.DiscoveryCenter.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'))
